IDP-1634 - Add configuration for more Persistent NameID storage control
https://issues.shibboleth.net/jira/browse/IDP-1634